# Android_Native_jobject_practice

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/native_jobject_practice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native.cpp
app/src/main/java/com/example/native_jobject_practice/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/native_jobject_practice/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
